[Australis] Bug 968595 - Clean up Menu Panel SubViews and panel footer styling. r=mikedeboer
UltraBlame original commit: 5d90aed97e135a768e27415253bf059bae293e27

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -467,23 +467,6 @@ box
 ;
 border
 -
-right
-:
-1px
-solid
-hsla
-(
-210
-4
-%
-10
-%
-.
-2
-)
-;
-border
--
 left
 :
 1px
@@ -496,7 +479,7 @@ hsla
 10
 %
 .
-2
+3
 )
 ;
 box
@@ -532,8 +515,14 @@ hsla
 ;
 color
 :
-#
-222426
+hsl
+(
+0
+0
+%
+15
+%
+)
 ;
 -
 moz
@@ -751,21 +740,6 @@ padding
 :
 12px
 ;
-background
--
-color
-:
-hsla
-(
-210
-4
-%
-10
-%
-.
-04
-)
-;
 }
 .
 panel
@@ -782,6 +756,21 @@ margin
 4px
 4px
 ;
+background
+-
+color
+:
+hsla
+(
+210
+4
+%
+10
+%
+.
+05
+)
+;
 box
 -
 shadow
@@ -798,57 +787,20 @@ hsla
 10
 %
 .
-08
+05
 )
 inset
 ;
 color
 :
-#
-797c80
-;
-}
-.
-subviewbutton
-.
-panel
--
-subview
--
-footer
-{
-margin
-:
-4px
--
-4px
--
-4px
-;
-box
--
-shadow
-:
-0
-1px
-0
-hsla
+hsl
 (
-210
-4
-%
-10
-%
-.
-08
-)
-inset
-;
-border
--
-radius
-:
 0
+0
+%
+50
+%
+)
 ;
 }
 .
@@ -1649,31 +1601,21 @@ palette
 "
 ]
 >
-toolbarbutton
-[
-sdk
+#
+personal
 -
-button
-=
-"
-true
-"
-]
+bookmarks
 >
-.
-toolbarbutton
+#
+bookmarks
 -
-icon
-toolbarbutton
-[
-sdk
+toolbar
 -
-button
-=
-"
-true
-"
-]
+placeholder
+#
+personal
+-
+bookmarks
 [
 cui
 -
@@ -1686,10 +1628,12 @@ panel
 "
 ]
 >
-.
-toolbarbutton
+#
+bookmarks
 -
-icon
+toolbar
+-
+placeholder
 {
 height
 :
@@ -2488,31 +2432,15 @@ background
 -
 color
 :
-rgba
+hsla
 (
-0
-0
-0
-0
+210
+4
+%
+10
+%
 .
-05
-)
-;
-box
--
-shadow
-:
-0
--
-1px
-0
-rgba
-(
-0
-0
-0
-.
-15
+07
 )
 ;
 padding
@@ -2535,21 +2463,21 @@ display
 :
 flex
 ;
-box
+border
 -
-shadow
+top
 :
-0
--
 1px
-0
-rgba
+solid
+hsla
 (
-0
-0
-0
+210
+4
+%
+10
+%
 .
-15
+14
 )
 ;
 }
@@ -2572,14 +2500,15 @@ left
 :
 1px
 solid
-rgba
+hsla
 (
-0
-0
-0
-0
+210
+4
+%
+10
+%
 .
-1
+14
 )
 ;
 margin
@@ -2667,16 +2596,6 @@ none
 ;
 border
 :
-1px
-solid
-transparent
-;
-border
--
-bottom
--
-style
-:
 none
 ;
 border
@@ -2710,11 +2629,35 @@ status
 {
 border
 -
-bottom
--
-style
+top
 :
+1px
 solid
+hsla
+(
+210
+4
+%
+10
+%
+.
+14
+)
+;
+border
+-
+bottom
+:
+1px
+solid
+transparent
+;
+margin
+-
+bottom
+:
+-
+1px
 ;
 }
 #
@@ -3279,6 +3222,21 @@ opacity
 #
 PanelUI
 -
+fxa
+-
+status
+:
+not
+(
+[
+disabled
+]
+)
+:
+hover
+#
+PanelUI
+-
 help
 :
 not
@@ -3313,35 +3271,31 @@ outline
 :
 1px
 solid
-rgba
+hsla
 (
-0
-0
-0
-0
+210
+4
+%
+10
+%
 .
-1
+07
 )
 ;
 background
 -
 color
 :
-rgba
+hsla
 (
-0
-0
-0
-0
+210
+4
+%
+10
+%
 .
-1
+07
 )
-;
-box
--
-shadow
-:
-none
 ;
 }
 #
@@ -3359,35 +3313,75 @@ disabled
 )
 :
 hover
+:
+active
+#
+PanelUI
+-
+help
+:
+not
+(
+[
+disabled
+]
+)
+:
+hover
+:
+active
+#
+PanelUI
+-
+customize
+:
+hover
+:
+active
+#
+PanelUI
+-
+quit
+:
+not
+(
+[
+disabled
+]
+)
+:
+hover
+:
+active
 {
+outline
+:
+1px
+solid
+hsla
+(
+210
+4
+%
+10
+%
+.
+12
+)
+;
 background
 -
 color
 :
-rgba
+hsla
 (
-0
-0
-0
-0
+210
+4
+%
+10
+%
 .
-1
-)
-;
-border
--
-bottom
--
-color
-:
-rgba
-(
-0
-0
-0
-0
-.
-1
+12
 )
 ;
 box
@@ -3395,18 +3389,57 @@ box
 shadow
 :
 0
--
 1px
 0
-rgba
+hsla
 (
-0
-0
-0
-0
+210
+4
+%
+10
+%
 .
-2
+05
 )
+inset
+;
+}
+#
+PanelUI
+-
+fxa
+-
+status
+:
+not
+(
+[
+disabled
+]
+)
+:
+hover
+#
+PanelUI
+-
+fxa
+-
+status
+:
+not
+(
+[
+disabled
+]
+)
+:
+hover
+:
+active
+{
+outline
+:
+none
 ;
 }
 #
@@ -3460,6 +3493,13 @@ color
 :
 #
 ad3434
+;
+outline
+-
+color
+:
+#
+992e2e
 ;
 }
 #
@@ -3980,7 +4020,7 @@ hsla
 10
 %
 .
-1
+11
 )
 ;
 }
@@ -4009,7 +4049,7 @@ hsla
 10
 %
 .
-1
+11
 )
 ;
 }
@@ -4062,7 +4102,7 @@ hsla
 10
 %
 .
-15
+12
 )
 ;
 border
@@ -4077,7 +4117,7 @@ hsla
 10
 %
 .
-15
+14
 )
 ;
 box
@@ -4087,6 +4127,176 @@ shadow
 0
 1px
 0
+hsla
+(
+210
+4
+%
+10
+%
+.
+03
+)
+inset
+;
+}
+.
+subviewbutton
+.
+panel
+-
+subview
+-
+footer
+{
+margin
+:
+4px
+-
+4px
+-
+4px
+;
+background
+-
+color
+:
+hsla
+(
+210
+4
+%
+10
+%
+.
+07
+)
+;
+border
+-
+top
+:
+1px
+solid
+hsla
+(
+210
+4
+%
+10
+%
+.
+12
+)
+;
+border
+-
+radius
+:
+0
+;
+color
+:
+hsl
+(
+0
+0
+%
+25
+%
+)
+}
+.
+subviewbutton
+.
+panel
+-
+subview
+-
+footer
+buttonStateHover
+{
+background
+-
+color
+:
+hsla
+(
+210
+4
+%
+10
+%
+.
+1
+)
+;
+border
+-
+top
+:
+1px
+solid
+hsla
+(
+210
+4
+%
+10
+%
+.
+12
+)
+;
+}
+.
+subviewbutton
+.
+panel
+-
+subview
+-
+footer
+buttonStateActive
+{
+background
+-
+color
+:
+hsla
+(
+210
+4
+%
+10
+%
+.
+15
+)
+;
+border
+-
+top
+:
+1px
+solid
+hsla
+(
+210
+4
+%
+10
+%
+.
+12
+)
+;
+box
+-
+shadow
+:
+0
+1px
 0
 hsla
 (
