Bug 965819 - The selected item's background color in the variables view for the dark theme is incorrect;r=vporof
UltraBlame original commit: 83b58d9d3bbe9907d12330ccb2727792e16e1451

--- a/browser/themes/shared/devtools/widgets.inc.css
+++ b/browser/themes/shared/devtools/widgets.inc.css
@@ -3432,6 +3432,94 @@ color
 ;
 }
 .
+theme
+-
+dark
+.
+variables
+-
+view
+-
+scope
+:
+focus
+>
+.
+title
+.
+theme
+-
+dark
+.
+variable
+-
+or
+-
+property
+:
+focus
+>
+.
+title
+{
+background
+-
+color
+:
+#
+1d4f73
+;
+color
+:
+#
+f5f7fa
+;
+}
+.
+theme
+-
+light
+.
+variables
+-
+view
+-
+scope
+:
+focus
+>
+.
+title
+.
+theme
+-
+light
+.
+variable
+-
+or
+-
+property
+:
+focus
+>
+.
+title
+{
+background
+-
+color
+:
+#
+4c9ed9
+;
+color
+:
+#
+f5f7fa
+;
+}
+.
 variables
 -
 view
