Bug 969247 part.1 Remove or replace DOM_VK_ENTER and NS_VK_ENTER users r=smaug
UltraBlame original commit: e947cee33a9206310dc5ea57492a2f3fac4807ab

--- a/layout/base/tests/test_bug644768.html
+++ b/layout/base/tests/test_bug644768.html
@@ -15,10 +15,62 @@ title
 Test
 for
 Bug
-596506
+644768
 <
 /
 title
+>
+<
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+/
+tests
+/
+SimpleTest
+/
+SimpleTest
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+/
+tests
+/
+SimpleTest
+/
+WindowSnapshot
+.
+js
+"
+>
+<
+/
+script
 >
 <
 script
@@ -37,7 +89,7 @@ tests
 /
 SimpleTest
 /
-SimpleTest
+EventUtils
 .
 js
 "
@@ -75,37 +127,18 @@ css
 /
 >
 <
-script
-type
-=
-"
-text
-/
-javascript
-"
-src
-=
-"
-/
-tests
-/
-SimpleTest
-/
-EventUtils
-.
-js
-"
->
-<
-/
-script
->
-<
 /
 head
 >
 <
 body
+onload
+=
+"
+test
+(
+)
+"
 >
 <
 a
@@ -133,12 +166,12 @@ cgi
 ?
 id
 =
-596506
+644768
 "
 >
 Mozilla
 Bug
-596506
+644768
 <
 /
 a
@@ -162,13 +195,90 @@ id
 "
 content
 "
-style
+>
+<
+textarea
+id
 =
 "
-display
-:
-none
+testInput
 "
+dir
+=
+"
+rtl
+"
+cols
+=
+"
+80
+"
+rows
+=
+"
+25
+"
+>
+=
+=
+&
+#
+x0632
+;
+&
+#
+x0627
+;
+&
+#
+x062F
+;
+&
+#
+x0631
+;
+&
+#
+x0648
+;
+&
+#
+x0632
+;
+&
+#
+x0647
+;
+&
+#
+x0627
+;
+=
+=
+*
+[
+[
+&
+#
+x06F1
+;
+&
+#
+x06F3
+;
+&
+#
+x06F0
+;
+&
+#
+x06F7
+;
+]
+]
+<
+/
+textarea
 >
 <
 /
@@ -184,10 +294,15 @@ test
 >
 <
 script
+class
+=
+"
+testbody
+"
 type
 =
 "
-application
+text
 /
 javascript
 "
@@ -198,7 +313,7 @@ javascript
 Test
 for
 Bug
-596506
+644768
 *
 *
 /
@@ -208,94 +323,74 @@ waitForExplicitFinish
 (
 )
 ;
-SimpleTest
-.
-waitForFocus
-(
-runTest
-)
-;
-const
-kIsMac
-=
-navigator
-.
-platform
-.
-indexOf
-(
-"
-Mac
-"
-)
-=
-=
-0
-;
 function
-append
-(
-str
-)
-{
-for
-(
-var
-i
-=
-0
-;
-i
-<
-str
-.
-length
-;
-+
-+
-i
-)
-{
-synthesizeKey
-(
-str
-[
-i
-]
-{
-}
-)
-;
-}
-}
-function
-runTest
+test
 (
 )
 {
 var
-edit
+textInput
 =
-document
-.
-getElementById
 (
 "
-edit
+testInput
 "
 )
 ;
-edit
+var
+s1
+s2
+equal
+str1
+str2
+;
+textInput
 .
 focus
 (
 )
 ;
-append
+s1
+=
+snapshotWindow
+(
+window
+)
+;
+synthesizeKey
 (
 "
-First
+VK_UP
 "
+{
+}
+)
+;
+synthesizeKey
+(
+"
+VK_UP
+"
+{
+}
+)
+;
+synthesizeKey
+(
+"
+VK_UP
+"
+{
+}
+)
+;
+synthesizeKey
+(
+"
+VK_DELETE
+"
+{
+}
 )
 ;
 synthesizeKey
@@ -307,90 +402,51 @@ VK_RETURN
 }
 )
 ;
-append
+s2
+=
+snapshotWindow
 (
-"
-Second
-"
+window
 )
 ;
-synthesizeKey
+[
+equal
+str1
+str2
+]
+=
+compareSnapshots
 (
-"
-VK_UP
-"
-{
-}
-)
-;
-synthesizeKey
-(
-"
-VK_UP
-"
-{
-}
-)
-;
-if
-(
-kIsMac
-)
-{
-synthesizeKey
-(
-"
-VK_RIGHT
-"
-{
-accelKey
-:
+s1
+s2
 true
-}
 )
 ;
-}
-else
-{
-synthesizeKey
+ok
 (
+equal
 "
-VK_END
-"
-{
-}
-)
-;
-}
-append
-(
-"
-ly
-"
-)
-;
-is
-(
-edit
-.
-value
-"
-Firstly
-\
-nSecond
-"
-"
-Pressing
-end
-should
-position
-the
-cursor
-before
-the
-terminating
 newline
+before
+bidi
+text
+shouldn
+'
+t
+change
+direction
+:
+expected
 "
++
+str1
++
+"
+but
+got
+"
++
+str2
 )
 ;
 SimpleTest
@@ -407,18 +463,6 @@ script
 <
 /
 pre
->
-<
-textarea
-id
-=
-"
-edit
-"
->
-<
-/
-textarea
 >
 <
 /
