--- a/layout/generic/test/test_bug240933.html
+++ b/layout/generic/test/test_bug240933.html
@@ -343,7 +343,7 @@ value
 synthesizeKey
 (
 "
-VK_ENTER
+VK_RETURN
 "
 {
 }
@@ -393,7 +393,7 @@ focus
 synthesizeKey
 (
 "
-VK_ENTER
+VK_RETURN
 "
 {
 }
@@ -423,7 +423,7 @@ work
 synthesizeKey
 (
 "
-VK_ENTER
+VK_RETURN
 "
 {
 }
