--- a/browser/themes/shared/devtools/netmonitor.inc.css
+++ b/browser/themes/shared/devtools/netmonitor.inc.css
@@ -852,6 +852,10 @@ requests
 -
 menu
 -
+icon
+-
+and
+-
 file
 {
 width
@@ -863,6 +867,102 @@ min
 width
 :
 4em
+;
+}
+.
+requests
+-
+menu
+-
+icon
+{
+background
+:
+#
+fff
+;
+width
+:
+calc
+(
+1em
++
+4px
+)
+;
+height
+:
+calc
+(
+1em
++
+4px
+)
+;
+margin
+:
+-
+4px
+0px
+;
+-
+moz
+-
+margin
+-
+end
+:
+4px
+;
+}
+.
+theme
+-
+dark
+.
+requests
+-
+menu
+-
+icon
+{
+outline
+:
+1px
+solid
+table_itemDarkStartBorder
+;
+}
+.
+theme
+-
+light
+.
+requests
+-
+menu
+-
+icon
+{
+outline
+:
+1px
+solid
+table_itemLightStartBorder
+;
+}
+.
+requests
+-
+menu
+-
+file
+{
+text
+-
+align
+:
+start
 ;
 }
 .
@@ -1927,20 +2027,6 @@ position
 -
 1px
 center
-;
-margin
--
-top
-:
--
-1px
-;
-margin
--
-bottom
-:
--
-1px
 ;
 }
 .
@@ -4568,7 +4654,17 @@ requests
 -
 menu
 -
+icon
+-
+and
+-
 file
+{
+width
+:
+30vw
+;
+}
 .
 requests
 -
@@ -4677,6 +4773,10 @@ overflows
 requests
 -
 menu
+-
+icon
+-
+and
 -
 file
 {
