Bug 966678 - Australis' customize mode's "Restore defaults" button disabled styling isn't obvious. r=mconley
UltraBlame original commit: db98e96431baeac1ce6e5374f5a5fc0c54674cce

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -500,6 +500,24 @@ appearance
 none
 ;
 }
+.
+customizationmode
+-
+button
+[
+disabled
+=
+"
+true
+"
+]
+{
+opacity
+:
+.
+5
+;
+}
 #
 customization
 -
