Bug 966698 - Tabs toolbar shouldn't have a top margin in fullscreen mode. r=Gijs
UltraBlame original commit: 70e5e705befdb27cc250f96c5714865065264101

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -214,11 +214,20 @@ menubar
 not
 (
 [
+moz
+-
+collapsed
+=
+true
+]
+)
+:
+not
+(
+[
 autohide
 =
-"
 true
-"
 ]
 )
 ~
@@ -228,12 +237,21 @@ TabsToolbar
 toolbar
 -
 menubar
+:
+not
+(
+[
+moz
+-
+collapsed
+=
+true
+]
+)
 [
 autohide
 =
-"
 true
-"
 ]
 :
 not
