--- a/browser/themes/shared/devtools/app-manager/projects.css
+++ b/browser/themes/shared/devtools/app-manager/projects.css
@@ -1465,6 +1465,56 @@ inline
 .
 project
 -
+type
+{
+display
+:
+none
+;
+margin
+-
+left
+:
+10px
+;
+}
+[
+type
+=
+"
+hosted
+"
+]
+>
+.
+project
+-
+type
+.
+hosted
+[
+type
+=
+"
+packaged
+"
+]
+>
+.
+project
+-
+type
+.
+packaged
+{
+display
+:
+inline
+;
+}
+.
+project
+-
 buttons
 {
 display
