--- a/browser/metro/theme/circularprogress.css
+++ b/browser/metro/theme/circularprogress.css
@@ -18,6 +18,10 @@ progressRing
 circularprogressindicator
 -
 progressTrack
+.
+circularprogressindicator
+-
+progressNotification
 {
 margin
 :
@@ -95,6 +99,81 @@ bg
 .
 png
 )
+;
+}
+.
+circularprogressindicator
+-
+progressNotification
+{
+width
+:
+40px
+;
+height
+:
+40px
+;
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+images
+/
+navbar
+-
+download
+-
+finished
+.
+png
+)
+;
+visibility
+:
+hidden
+;
+}
+.
+circularprogressindicator
+-
+progressNotification
+.
+progressNotification
+-
+active
+{
+visibility
+:
+visible
+;
+opacity
+:
+0
+;
+transform
+:
+scale
+(
+2
+)
+;
+transition
+:
+opacity
+metro_animation_duration
+transform
+metro_animation_duration
 ;
 }
 .
