Bug 932410 - Implement the focus ring for -moz-appearance:none styled <input type=range> in a different way so that content authors can change/remove it. r=bz
UltraBlame original commit: cd1bb1422d60ebedb55a62956b4ba206b27ebe63

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -4158,6 +4158,28 @@ range
 -
 moz
 -
+focus
+-
+outer
+{
+border
+:
+1px
+dotted
+black
+;
+}
+input
+[
+type
+=
+range
+]
+:
+:
+-
+moz
+-
 range
 -
 track
