--- a/toolkit/themes/osx/global/media/videocontrols.css
+++ b/toolkit/themes/osx/global/media/videocontrols.css
@@ -1667,6 +1667,76 @@ size
 ;
 }
 .
+volumeBackground
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+media
+/
+volume
+-
+empty
+2x
+.
+png
+)
+;
+background
+-
+size
+:
+32px
+16px
+;
+}
+.
+volumeForeground
+{
+background
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+media
+/
+volume
+-
+full
+2x
+.
+png
+)
+;
+background
+-
+size
+:
+32px
+16px
+;
+}
+.
 muteButton
 {
 background
