--- a/toolkit/themes/osx/global/notification.css
+++ b/toolkit/themes/osx/global/notification.css
@@ -551,6 +551,56 @@ popup
 -
 notification
 -
+learnmore
+-
+link
+{
+margin
+-
+top
+:
+1em
+!
+important
+;
+-
+moz
+-
+margin
+-
+start
+:
+0
+!
+important
+;
+}
+.
+popup
+-
+notification
+-
+learnmore
+-
+link
+:
+not
+(
+[
+href
+]
+)
+{
+display
+:
+none
+;
+}
+.
+popup
+-
+notification
+-
 button
 -
 container
