--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -1601,21 +1601,31 @@ palette
 "
 ]
 >
-#
-personal
+toolbarbutton
+[
+sdk
 -
-bookmarks
+button
+=
+"
+true
+"
+]
 >
-#
-bookmarks
+.
+toolbarbutton
 -
-toolbar
+icon
+toolbarbutton
+[
+sdk
 -
-placeholder
-#
-personal
--
-bookmarks
+button
+=
+"
+true
+"
+]
 [
 cui
 -
@@ -1628,12 +1638,10 @@ panel
 "
 ]
 >
-#
-bookmarks
+.
+toolbarbutton
 -
-toolbar
--
-placeholder
+icon
 {
 height
 :
