Bug 965237 - Make overflow-clip-box:content-box be the default for <input type=text/password/number> and <textarea>.  r=roc
UltraBlame original commit: c84d530c9a51aa689af55e9db2178095165630bb

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -529,6 +529,14 @@ overflow
 :
 inherit
 ;
+overflow
+-
+clip
+-
+box
+:
+inherit
+;
 }
 *
 |
@@ -602,6 +610,14 @@ inherit
 !
 important
 ;
+overflow
+-
+clip
+-
+box
+:
+inherit
+;
 }
 *
 |
@@ -651,6 +667,14 @@ important
 text
 -
 overflow
+:
+inherit
+;
+overflow
+-
+clip
+-
+box
 :
 inherit
 ;
@@ -797,6 +821,14 @@ float
 none
 !
 important
+;
+overflow
+-
+clip
+-
+box
+:
+inherit
 ;
 }
 *
