--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -567,6 +567,16 @@ break
 -
 word
 ;
+overflow
+-
+clip
+-
+box
+:
+content
+-
+box
+;
 }
 textarea
 >
@@ -684,6 +694,14 @@ character
 visibility
 :
 visible
+;
+overflow
+-
+clip
+-
+box
+:
+inherit
 ;
 }
 textarea
@@ -1721,6 +1739,34 @@ background
 color
 :
 transparent
+;
+}
+input
+[
+type
+=
+"
+text
+"
+]
+input
+[
+type
+=
+"
+password
+"
+]
+{
+overflow
+-
+clip
+-
+box
+:
+content
+-
+box
 ;
 }
 input
@@ -4610,6 +4656,16 @@ none
 width
 :
 149px
+;
+overflow
+-
+clip
+-
+box
+:
+content
+-
+box
 ;
 }
 input
