Bug 965209 - workaround Australis panel issues with sdk iframe widgets, r=MattN
UltraBlame original commit: bfecd06b79f20521dc59eda5686b15e084384cdc

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -2042,6 +2042,16 @@ sdkstylewidget
 true
 "
 ]
+:
+not
+(
+.
+panel
+-
+wide
+-
+item
+)
 {
 width
 :
@@ -2084,7 +2094,7 @@ panel
 -
 wide
 -
-widget
+item
 )
 {
 -
@@ -2132,6 +2142,54 @@ margin
 :
 4px
 auto
+;
+}
+#
+PanelUI
+-
+multiView
+[
+viewtype
+=
+"
+subview
+"
+]
+toolbaritem
+[
+cui
+-
+areatype
+=
+"
+menu
+-
+panel
+"
+]
+[
+sdkstylewidget
+=
+"
+true
+"
+]
+:
+not
+(
+.
+panel
+-
+wide
+-
+item
+)
+>
+iframe
+{
+visibility
+:
+hidden
 ;
 }
 toolbaritem
