Bug 1402126 - Change the icon size of Download items in the Library's Downloads panel view to 32px. r=Gijs
MozReview-Commit-ID: FE1EftZWmzV

UltraBlame original commit: a1188a2bf9ee41bf552997eb5274bbfd9c80975d

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -15252,6 +15252,14 @@ height
 :
 48px
 ;
+padding
+-
+inline
+-
+start
+:
+8px
+;
 }
 .
 subviewbutton
@@ -15279,6 +15287,25 @@ margin
 4px
 0
 0
+;
+}
+.
+subviewbutton
+.
+download
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+32px
+;
+height
+:
+32px
 ;
 }
 .
