--- a/browser/themes/osx/customizableui/panelUI.css
+++ b/browser/themes/osx/customizableui/panelUI.css
@@ -61,6 +61,20 @@ start
 18px
 ;
 }
+.
+subviewbutton
+.
+download
+{
+padding
+-
+inline
+-
+start
+:
+14px
+;
+}
 photonpanelmultiview
 .
 toolbaritem
