Bug 1406770 - Allow dropping tabs on to the Bookmarks Toolbar Item if it is located in the nav-bar. r=Gijs
MozReview-Commit-ID: Ehd7zCiHfsD

UltraBlame original commit: e45c439aac94435c8e07238770f0380772e19ef9

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1418,6 +1418,30 @@ customization
 target
 >
 #
+personal
+-
+bookmarks
+#
+TabsToolbar
+[
+movingtab
+]
++
+#
+nav
+-
+bar
+>
+#
+nav
+-
+bar
+-
+customization
+-
+target
+>
+#
 home
 -
 button
