--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -51,6 +51,16 @@ height
 -
 tab
 -
+min
+-
+width
+:
+76px
+;
+-
+-
+tab
+-
 loading
 -
 fill
@@ -247,12 +257,6 @@ padding
 :
 0
 ;
-}
-.
-tabbrowser
--
-tab
-{
 -
 moz
 -
@@ -261,6 +265,150 @@ box
 align
 :
 stretch
+;
+}
+.
+tabbrowser
+-
+tab
+:
+not
+(
+[
+pinned
+]
+)
+{
+-
+moz
+-
+box
+-
+flex
+:
+100
+;
+max
+-
+width
+:
+225px
+;
+min
+-
+width
+:
+var
+(
+-
+-
+tab
+-
+min
+-
+width
+)
+;
+width
+:
+0
+;
+transition
+:
+min
+-
+width
+100ms
+ease
+-
+out
+max
+-
+width
+100ms
+ease
+-
+out
+;
+}
+:
+root
+[
+uidensity
+=
+touch
+]
+.
+tabbrowser
+-
+tab
+:
+not
+(
+[
+pinned
+]
+)
+{
+min
+-
+width
+:
+calc
+(
+var
+(
+-
+-
+tab
+-
+min
+-
+width
+)
++
+10px
+)
+;
+}
+.
+tabbrowser
+-
+tab
+:
+not
+(
+[
+pinned
+]
+)
+:
+not
+(
+[
+fadein
+]
+)
+{
+max
+-
+width
+:
+0
+.
+1px
+;
+min
+-
+width
+:
+0
+.
+1px
+;
+visibility
+:
+hidden
 ;
 }
 .
