Bug 1403157 - Unify appMenu webext new permissions notification appearance with browser update notification. r=jaws
MozReview-Commit-ID: Eu64q8zHWkm

UltraBlame original commit: b226a2f626e2cc597d55bc9539313a3e28c2dea4

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -5658,11 +5658,11 @@ icon
 {
 width
 :
-14px
+16px
 ;
 height
 :
-14px
+16px
 ;
 }
 .
@@ -6067,6 +6067,29 @@ bottom
 :
 3px
 ;
+padding
+-
+inline
+-
+start
+:
+12px
+;
+}
+#
+appMenu
+-
+addon
+-
+banners
+>
+.
+addon
+-
+banner
+-
+item
+{
 padding
 -
 inline
@@ -6939,6 +6962,17 @@ display
 none
 ;
 }
+.
+addon
+-
+banner
+-
+item
+>
+.
+toolbarbutton
+-
+icon
 .
 panel
 -
@@ -9128,6 +9162,17 @@ top
 ;
 }
 .
+addon
+-
+banner
+-
+item
+>
+.
+toolbarbutton
+-
+text
+.
 subviewbutton
 -
 iconic
@@ -9472,6 +9517,17 @@ subview
 -
 footer
 )
+>
+.
+toolbarbutton
+-
+text
+.
+addon
+-
+banner
+-
+item
 >
 .
 toolbarbutton
@@ -10280,6 +10336,16 @@ start
 0
 ;
 }
+photonpanelmultiview
+.
+addon
+-
+banner
+-
+item
+:
+:
+after
 photonpanelmultiview
 .
 panel
