Bug 1404568 - Use the correct browser_action theme icons when the action is in a menu-panel. r=mixedpuppy
The patch adding support for specifying theme icons had a bug in the CSS: it
added styles for the action in a menu-panel depending on theme, but missed out
the theme pseudo-class selectors.  Therefore the dark text icon was always used
since it was last in the CSS.
Additionally, the menu panels can't be styled, so still have light backgrounds
and dark text even in light text themes. If a light icon is used in the menu
panel in a light text theme it will be hard to see.

Thus, this patch adds the pseudo-class for dark text themes, but removes the
selector entirely for light text themes.

MozReview-Commit-ID: AmKVDYwGGKj

UltraBlame original commit: 38347dff77997359905b6efc1f6061e4103431d6

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -2694,23 +2694,6 @@ inherit
 )
 ;
 }
-.
-webextension
--
-browser
--
-action
-[
-cui
--
-areatype
-=
-"
-menu
--
-panel
-"
-]
 toolbarpaletteitem
 [
 place
@@ -2772,6 +2755,13 @@ menu
 panel
 "
 ]
+:
+-
+moz
+-
+lwtheme
+-
+darktext
 toolbarpaletteitem
 [
 place
@@ -3034,23 +3024,6 @@ inherit
 )
 ;
 }
-.
-webextension
--
-browser
--
-action
-[
-cui
--
-areatype
-=
-"
-menu
--
-panel
-"
-]
 toolbarpaletteitem
 [
 place
@@ -3114,6 +3087,13 @@ menu
 panel
 "
 ]
+:
+-
+moz
+-
+lwtheme
+-
+darktext
 toolbarpaletteitem
 [
 place
