Bug 1406478 - Set browser.tabs.tabMinWidth to 76. r=jaws
MozReview-Commit-ID: 3bbTd1Fmtc5

UltraBlame original commit: 2d91a88f5f5d09e0d714c68ddb76ff24479056be

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -51,6 +51,16 @@ height
 -
 tab
 -
+min
+-
+width
+:
+76px
+;
+-
+-
+tab
+-
 loading
 -
 fill
@@ -247,12 +257,6 @@ padding
 :
 0
 ;
-}
-.
-tabbrowser
--
-tab
-{
 -
 moz
 -
