--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -95,16 +95,6 @@ no
 -
 repeat
 ;
--
--
-tab
--
-min
--
-width
-:
-50px
-;
 }
 :
 root
@@ -1073,6 +1063,46 @@ width
 ease
 -
 out
+;
+}
+:
+root
+[
+uidensity
+=
+touch
+]
+.
+tabbrowser
+-
+tab
+:
+not
+(
+[
+pinned
+]
+)
+{
+min
+-
+width
+:
+calc
+(
+var
+(
+-
+-
+tab
+-
+min
+-
+width
+)
++
+10px
+)
 ;
 }
 .
