Bug 1406964 - Fading out the toolbar buttons should use a quicker easing function. r=Gijs
MozReview-Commit-ID: Esopfx645qF

UltraBlame original commit: bbdf62ee058956b87d114a440e37c2f9a31ee7d6

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -3556,6 +3556,23 @@ duration
 :
 500ms
 ;
+animation
+-
+timing
+-
+function
+:
+var
+(
+-
+-
+animation
+-
+easing
+-
+function
+)
+;
 }
 keyframes
 widget
