--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -2417,9 +2417,9 @@ display
 :
 flex
 ;
-justify
+align
 -
-content
+items
 :
 center
 ;
@@ -2462,9 +2462,9 @@ top
 :
 0
 ;
-height
+margin
 :
-230px
+auto
 ;
 width
 :
@@ -2562,7 +2562,7 @@ transform
 :
 translateY
 (
-30px
+0px
 )
 ;
 }
@@ -2807,12 +2807,6 @@ shortcuts
 -
 modal
 {
-height
-:
-fit
--
-content
-;
 width
 :
 45
@@ -5048,7 +5042,7 @@ vertical
 -
 align
 :
-bottom
+sub
 ;
 }
 .
@@ -7486,6 +7480,12 @@ y
 :
 auto
 ;
+padding
+-
+top
+:
+11px
+;
 }
 .
 sources
@@ -7664,6 +7664,30 @@ padding
 0px
 3px
 0px
+;
+display
+:
+inline
+-
+block
+;
+}
+.
+sources
+-
+list
+.
+tree
+.
+node
+.
+no
+-
+arrow
+{
+width
+:
+10px
 ;
 display
 :
@@ -7878,9 +7902,10 @@ hidden
 ;
 padding
 :
-6
-.
-5px
+8px
+8px
+7px
+8px
 ;
 margin
 -
@@ -12561,26 +12586,6 @@ color
 ;
 }
 .
-paused
-.
-CodeMirror
--
-line
-.
-paused
-.
-CodeMirror
--
-linenumber
-{
-opacity
-:
-0
-.
-7
-;
-}
-.
 editor
 -
 wrapper
@@ -14026,6 +14031,12 @@ padding
 :
 1px
 0
+;
+vertical
+-
+align
+:
+bottom
 ;
 }
 .
@@ -17056,6 +17067,34 @@ auto
 ;
 }
 .
+welcomebox
+.
+small
+-
+size
+-
+layout
+{
+display
+:
+none
+;
+}
+.
+welcomebox
+.
+normal
+-
+layout
+{
+display
+:
+inline
+-
+block
+;
+}
+.
 shortcutKeys
 {
 text
@@ -17067,6 +17106,28 @@ right
 float
 :
 left
+;
+font
+-
+family
+:
+Courier
+;
+}
+.
+shortcutKey
+{
+display
+:
+inline
+-
+block
+;
+margin
+-
+right
+:
+10px
 ;
 font
 -
@@ -17111,6 +17172,62 @@ bottom
 :
 1px
 ;
+}
+media
+(
+max
+-
+width
+:
+430px
+)
+{
+.
+welcomebox
+.
+small
+-
+size
+-
+layout
+{
+display
+:
+inline
+-
+block
+;
+}
+.
+welcomebox
+.
+normal
+-
+layout
+{
+display
+:
+none
+;
+}
+.
+shortcutFunction
+{
+margin
+-
+left
+:
+0
+;
+}
+.
+shortcutKey
+{
+display
+:
+block
+;
+}
 }
 .
 source
