--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -2417,9 +2417,9 @@ display
 :
 flex
 ;
-align
+justify
 -
-items
+content
 :
 center
 ;
@@ -2462,9 +2462,9 @@ top
 :
 0
 ;
-margin
+height
 :
-auto
+230px
 ;
 width
 :
@@ -2562,7 +2562,7 @@ transform
 :
 translateY
 (
-0px
+30px
 )
 ;
 }
@@ -2807,6 +2807,12 @@ shortcuts
 -
 modal
 {
+height
+:
+fit
+-
+content
+;
 width
 :
 45
@@ -5042,7 +5048,7 @@ vertical
 -
 align
 :
-sub
+bottom
 ;
 }
 .
@@ -7480,12 +7486,6 @@ y
 :
 auto
 ;
-padding
--
-top
-:
-11px
-;
 }
 .
 sources
@@ -7664,30 +7664,6 @@ padding
 0px
 3px
 0px
-;
-display
-:
-inline
--
-block
-;
-}
-.
-sources
--
-list
-.
-tree
-.
-node
-.
-no
--
-arrow
-{
-width
-:
-10px
 ;
 display
 :
@@ -7902,10 +7878,9 @@ hidden
 ;
 padding
 :
-8px
-8px
-7px
-8px
+6
+.
+5px
 ;
 margin
 -
@@ -12586,6 +12561,26 @@ color
 ;
 }
 .
+paused
+.
+CodeMirror
+-
+line
+.
+paused
+.
+CodeMirror
+-
+linenumber
+{
+opacity
+:
+0
+.
+7
+;
+}
+.
 editor
 -
 wrapper
@@ -14031,12 +14026,6 @@ padding
 :
 1px
 0
-;
-vertical
--
-align
-:
-bottom
 ;
 }
 .
@@ -17067,34 +17056,6 @@ auto
 ;
 }
 .
-welcomebox
-.
-small
--
-size
--
-layout
-{
-display
-:
-none
-;
-}
-.
-welcomebox
-.
-normal
--
-layout
-{
-display
-:
-inline
--
-block
-;
-}
-.
 shortcutKeys
 {
 text
@@ -17106,28 +17067,6 @@ right
 float
 :
 left
-;
-font
--
-family
-:
-Courier
-;
-}
-.
-shortcutKey
-{
-display
-:
-inline
--
-block
-;
-margin
--
-right
-:
-10px
 ;
 font
 -
@@ -17172,62 +17111,6 @@ bottom
 :
 1px
 ;
-}
-media
-(
-max
--
-width
-:
-430px
-)
-{
-.
-welcomebox
-.
-small
--
-size
--
-layout
-{
-display
-:
-inline
--
-block
-;
-}
-.
-welcomebox
-.
-normal
--
-layout
-{
-display
-:
-none
-;
-}
-.
-shortcutFunction
-{
-margin
--
-left
-:
-0
-;
-}
-.
-shortcutKey
-{
-display
-:
-block
-;
-}
 }
 .
 source
