Bug 1406912 - Fix _serializeRangeData does not handle ranges found in same node properly. r=mixedpuppy
UltraBlame original commit: 969e0b72c2eea55d49c3dc057ab3ccad1c1a1865

--- a/browser/components/extensions/test/browser/file_find_frames.html
+++ b/browser/components/extensions/test/browser/file_find_frames.html
@@ -180,6 +180,131 @@ ood
 p
 >
 <
+p
+>
+This
+is
+an
+example
+of
+an
+example
+in
+the
+same
+node
+.
+<
+/
+p
+>
+<
+p
+>
+This
+<
+span
+>
+is
+an
+example
+<
+/
+span
+>
+of
+<
+span
+>
+an
+example
+<
+/
+span
+>
+of
+ranges
+in
+separate
+nodes
+.
+<
+/
+p
+>
+<
+iframe
+src
+=
+"
+data
+:
+text
+/
+html
+<
+p
+>
+example
+within
+a
+frame
+.
+<
+/
+p
+>
+<
+iframe
+src
+=
+'
+data
+:
+text
+/
+html
+example
+within
+a
+sub
+-
+frame
+'
+height
+=
+'
+50
+'
+width
+=
+'
+100
+%
+'
+>
+<
+/
+iframe
+>
+"
+height
+=
+"
+250
+"
+width
+=
+"
+100
+%
+"
+>
+<
+/
+iframe
+>
+<
 /
 body
 >
