Bug 1406278: Part 2b - Use subject principal as triggering principal in <img> "src" attribute. r=bz
MozReview-Commit-ID: DrblTjP99WJ

UltraBlame original commit: 9fca7bef9dfe04ab94ef14021dd14a76721af651

--- a/toolkit/components/extensions/test/mochitest/test_ext_web_accessible_resources.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_web_accessible_resources.html
@@ -279,7 +279,34 @@ img
 "
 )
 ;
+/
+/
+Set
+the
+src
+via
+wrappedJSObject
+so
+the
+load
+is
+triggered
+with
+the
+/
+/
+content
+page
+'
+s
+principal
+rather
+than
+ours
+.
 testImage
+.
+wrappedJSObject
 .
 setAttribute
 (
