Bug 1406278: Part 3 - Use subject principal as triggering principal in <script> "src" attribute. r=bz
MozReview-Commit-ID: KwGIE4t7KUx

UltraBlame original commit: cf383eff981f365975f777158e5e5cf6e388d32c

--- a/toolkit/components/extensions/test/mochitest/test_ext_web_accessible_resources.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_web_accessible_resources.html
@@ -1569,7 +1569,34 @@ script
 "
 )
 ;
+/
+/
+Set
+the
+src
+via
+wrappedJSObject
+so
+the
+load
+is
+triggered
+with
+the
+/
+/
+content
+page
+'
+s
+principal
+rather
+than
+ours
+.
 testScriptElement
+.
+wrappedJSObject
 .
 setAttribute
 (
@@ -2254,7 +2281,34 @@ script
 "
 )
 ;
+/
+/
+Set
+the
+src
+via
+wrappedJSObject
+so
+the
+load
+is
+triggered
+with
+the
+/
+/
+content
+page
+'
+s
+principal
+rather
+than
+ours
+.
 testScriptElement
+.
+wrappedJSObject
 .
 setAttribute
 (
