Bug 1406278: Part 4 - Use subject principal as triggering principal in <iframe>/<frame> "src" attribute r=bz
MozReview-Commit-ID: AgxZmfRvfTR

UltraBlame original commit: 8e7305ab6283ee4bd9ebf2a352c276b72c93b269

--- a/toolkit/components/extensions/test/mochitest/test_ext_web_accessible_resources.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_web_accessible_resources.html
@@ -895,7 +895,34 @@ iframe
 "
 )
 ;
+/
+/
+Set
+the
+src
+via
+wrappedJSObject
+so
+the
+load
+is
+triggered
+with
+the
+/
+/
+content
+page
+'
+s
+principal
+rather
+than
+ours
+.
 iframe
+.
+wrappedJSObject
 .
 setAttribute
 (
