Bug 1407077 - use photon colors for highlighted devtools toolbar icons;r=gl
MozReview-Commit-ID: LCEArSoizyk

UltraBlame original commit: 0947fb7cdfd2038dd86da1abea2e8c039c7ea58d

--- a/devtools/client/themes/variables.css
+++ b/devtools/client/themes/variables.css
@@ -137,8 +137,14 @@ highlighted
 -
 color
 :
-#
-5FC749
+var
+(
+-
+-
+green
+-
+60
+)
 ;
 -
 -
@@ -1002,8 +1008,14 @@ highlighted
 -
 color
 :
-#
-5FC749
+var
+(
+-
+-
+green
+-
+50
+)
 ;
 -
 -
@@ -2897,6 +2909,24 @@ red
 :
 #
 a4000f
+;
+-
+-
+green
+-
+50
+:
+#
+30e60b
+;
+-
+-
+green
+-
+60
+:
+#
+12bc00
 ;
 -
 -
