Bug 1406338 - Part 2: Show favicons in tabs tray page. r=nechen
MozReview-Commit-ID: BXOFuxwI0sl

UltraBlame original commit: 5e2772fd3b677aa1d266c62ccface234028cc9ed

--- a/mobile/android/app/src/main/res/layout/tabs_layout_item_view.xml
+++ b/mobile/android/app/src/main/res/layout/tabs_layout_item_view.xml
@@ -243,6 +243,77 @@ gecko
 .
 widget
 .
+FaviconView
+android
+:
+id
+=
+"
++
+id
+/
+favicon
+"
+style
+=
+"
+style
+/
+TabsLayoutItemFavicon
+"
+android
+:
+layout_width
+=
+"
+16dp
+"
+android
+:
+layout_height
+=
+"
+16dp
+"
+android
+:
+layout_gravity
+=
+"
+center_vertical
+"
+android
+:
+scaleType
+=
+"
+centerInside
+"
+gecko
+:
+dominantBorderEnabled
+=
+"
+false
+"
+gecko
+:
+overrideScaleType
+=
+"
+false
+"
+/
+>
+<
+org
+.
+mozilla
+.
+gecko
+.
+widget
+.
 FadedSingleColorTextView
 android
 :
@@ -253,6 +324,13 @@ id
 id
 /
 title
+"
+style
+=
+"
+style
+/
+TabLayoutItemTextAppearance
 "
 android
 :
@@ -270,6 +348,13 @@ wrap_content
 "
 android
 :
+layout_gravity
+=
+"
+center_vertical
+"
+android
+:
 layout_weight
 =
 "
@@ -277,35 +362,12 @@ layout_weight
 .
 0
 "
-style
-=
-"
-style
-/
-TabLayoutItemTextAppearance
-"
 android
 :
-textSize
+drawablePadding
 =
 "
-14sp
-"
-android
-:
-textColor
-=
-"
-color
-/
-tab_item_title
-"
-android
-:
-singleLine
-=
-"
-true
+6dp
 "
 android
 :
@@ -313,20 +375,6 @@ duplicateParentState
 =
 "
 true
-"
-gecko
-:
-fadeWidth
-=
-"
-15dp
-"
-android
-:
-paddingRight
-=
-"
-5dp
 "
 android
 :
@@ -344,6 +392,13 @@ paddingLeft
 "
 android
 :
+paddingRight
+=
+"
+5dp
+"
+android
+:
 paddingStart
 =
 "
@@ -351,59 +406,35 @@ paddingStart
 "
 android
 :
-drawablePadding
+singleLine
 =
 "
-6dp
+true
+"
+android
+:
+textColor
+=
+"
+color
+/
+tab_item_title
+"
+android
+:
+textSize
+=
+"
+14sp
+"
+gecko
+:
+fadeWidth
+=
+"
+15dp
 "
 /
->
-<
-!
--
--
-Use
-of
-baselineAlignBottom
-only
-supported
-from
-API
-11
-+
--
-if
-this
-needs
-to
-work
-on
-lower
-API
-versions
-we
-'
-ll
-need
-to
-override
-getBaseLine
-(
-)
-and
-return
-image
-height
-but
-we
-assume
-this
-won
-'
-t
-happen
--
--
 >
 <
 ImageView
@@ -440,17 +471,10 @@ wrap_content
 "
 android
 :
-scaleType
+layout_gravity
 =
 "
-center
-"
-android
-:
-baselineAlignBottom
-=
-"
-true
+center_vertical
 "
 android
 :
@@ -474,19 +498,26 @@ close_tab
 "
 android
 :
+duplicateParentState
+=
+"
+true
+"
+android
+:
+scaleType
+=
+"
+center
+"
+android
+:
 src
 =
 "
 drawable
 /
 tab_item_close_button
-"
-android
-:
-duplicateParentState
-=
-"
-true
 "
 /
 >
