--- a/mobile/android/app/src/main/res/layout/tabs_list_item_view.xml
+++ b/mobile/android/app/src/main/res/layout/tabs_list_item_view.xml
@@ -109,6 +109,27 @@ res
 /
 android
 "
+xmlns
+:
+gecko
+=
+"
+http
+:
+/
+/
+schemas
+.
+android
+.
+com
+/
+apk
+/
+res
+-
+auto
+"
 style
 =
 "
@@ -330,79 +351,75 @@ widget
 TabThumbnailWrapper
 >
 <
-LinearLayout
+org
+.
+mozilla
+.
+gecko
+.
+widget
+.
+FaviconView
+android
+:
+id
+=
+"
++
+id
+/
+favicon
+"
+style
+=
+"
+style
+/
+TabsListItemFavicon
+"
 android
 :
 layout_width
 =
 "
-0dip
+16dp
 "
 android
 :
 layout_height
 =
 "
-match_parent
+16dp
 "
 android
 :
-orientation
+layout_gravity
 =
 "
-vertical
+center_vertical
 "
 android
 :
-layout_weight
+scaleType
 =
 "
-1
-.
-0
+centerInside
 "
-android
+gecko
 :
-paddingTop
+dominantBorderEnabled
 =
 "
-4dip
+false
 "
-android
+gecko
 :
-paddingLeft
+overrideScaleType
 =
 "
-10dp
+false
 "
-android
-:
-paddingStart
-=
-"
-10dp
-"
-android
-:
-paddingRight
-=
-"
-2dp
-"
-android
-:
-paddingEnd
-=
-"
-4dip
-"
-android
-:
-duplicateParentState
-=
-"
-true
-"
+/
 >
 <
 TextView
@@ -421,14 +438,14 @@ android
 layout_width
 =
 "
-match_parent
+0dp
 "
 android
 :
 layout_height
 =
 "
-0dip
+wrap_content
 "
 android
 :
@@ -436,8 +453,6 @@ layout_weight
 =
 "
 1
-.
-0
 "
 style
 =
@@ -464,7 +479,7 @@ textSize
 "
 android
 :
-gravity
+layout_gravity
 =
 "
 center_vertical
@@ -485,23 +500,12 @@ maxLines
 "
 android
 :
-drawablePadding
-=
-"
-6dp
-"
-android
-:
 duplicateParentState
 =
 "
 true
 "
 /
->
-<
-/
-LinearLayout
 >
 <
 ImageView
@@ -538,13 +542,6 @@ match_parent
 "
 android
 :
-scaleType
-=
-"
-center
-"
-android
-:
 contentDescription
 =
 "
@@ -554,19 +551,26 @@ close_tab
 "
 android
 :
+duplicateParentState
+=
+"
+true
+"
+android
+:
+scaleType
+=
+"
+center
+"
+android
+:
 src
 =
 "
 drawable
 /
 tab_item_close_button
-"
-android
-:
-duplicateParentState
-=
-"
-true
 "
 /
 >
