--- a/mobile/android/app/src/photon/res/values-v17/styles.xml
+++ b/mobile/android/app/src/photon/res/values-v17/styles.xml
@@ -896,6 +896,75 @@ style
 name
 =
 "
+TabsLayoutItemFavicon
+"
+>
+<
+item
+name
+=
+"
+android
+:
+layout_marginEnd
+"
+>
+4dp
+<
+/
+item
+>
+<
+/
+style
+>
+<
+style
+name
+=
+"
+TabsListItemFavicon
+"
+>
+<
+item
+name
+=
+"
+android
+:
+layout_marginStart
+"
+>
+10dp
+<
+/
+item
+>
+<
+item
+name
+=
+"
+android
+:
+layout_marginEnd
+"
+>
+6dp
+<
+/
+item
+>
+<
+/
+style
+>
+<
+style
+name
+=
+"
 TabsTray
 .
 AddTab
