--- a/mobile/android/app/src/photon/res/values/dimens.xml
+++ b/mobile/android/app/src/photon/res/values/dimens.xml
@@ -1992,6 +1992,32 @@ tab_highlight_stroke_width
 dimen
 >
 <
+dimen
+name
+=
+"
+tab_favicon_size
+"
+>
+16dp
+<
+/
+dimen
+>
+<
+dimen
+name
+=
+"
+tab_favicon_text_size
+"
+>
+12sp
+<
+/
+dimen
+>
+<
 !
 -
 -
