--- a/mobile/android/app/src/photon/res/values/styles.xml
+++ b/mobile/android/app/src/photon/res/values/styles.xml
@@ -5762,6 +5762,75 @@ style
 name
 =
 "
+TabsLayoutItemFavicon
+"
+>
+<
+item
+name
+=
+"
+android
+:
+layout_marginRight
+"
+>
+4dp
+<
+/
+item
+>
+<
+/
+style
+>
+<
+style
+name
+=
+"
+TabsListItemFavicon
+"
+>
+<
+item
+name
+=
+"
+android
+:
+layout_marginLeft
+"
+>
+10dp
+<
+/
+item
+>
+<
+item
+name
+=
+"
+android
+:
+layout_marginRight
+"
+>
+6dp
+<
+/
+item
+>
+<
+/
+style
+>
+<
+style
+name
+=
+"
 Widget
 .
 RemoteTabsItemView
