Bug 1406874 - Show a color indicator for the selected tab strip on tablet. r=nechen
MozReview-Commit-ID: 9vYGxkI9swX

UltraBlame original commit: a9d5a7f5b04d94962baa9ba3c8076ac4249b1b8c

--- a/mobile/android/app/src/photon/res/layout/tab_strip_item_view.xml
+++ b/mobile/android/app/src/photon/res/layout/tab_strip_item_view.xml
@@ -159,18 +159,64 @@ tablet_tab_strip_item_width
 "
 tools
 :
-orientation
-=
-"
-horizontal
-"
-tools
-:
 parentTag
 =
 "
-LinearLayout
+RelativeLayout
 "
+>
+<
+View
+android
+:
+id
+=
+"
++
+id
+/
+indicator
+"
+android
+:
+layout_width
+=
+"
+dimen
+/
+tablet_tab_strip_item_width
+"
+android
+:
+layout_height
+=
+"
+3dp
+"
+android
+:
+background
+=
+"
+color
+/
+tablet_tab_strip_indicator
+"
+android
+:
+visibility
+=
+"
+gone
+"
+tools
+:
+visibility
+=
+"
+visible
+"
+/
 >
 <
 ImageView
@@ -213,10 +259,10 @@ browser_toolbar_favicon_size
 "
 android
 :
-layout_gravity
+layout_centerVertical
 =
 "
-center
+true
 "
 android
 :
@@ -252,109 +298,6 @@ gecko
 .
 widget
 .
-CheckableFadedSingleColorTextView
-android
-:
-id
-=
-"
-+
-id
-/
-title
-"
-android
-:
-layout_width
-=
-"
-0dip
-"
-android
-:
-layout_height
-=
-"
-match_parent
-"
-android
-:
-layout_weight
-=
-"
-1
-.
-0
-"
-android
-:
-duplicateParentState
-=
-"
-true
-"
-android
-:
-ellipsize
-=
-"
-end
-"
-android
-:
-gravity
-=
-"
-center_vertical
-"
-android
-:
-maxLines
-=
-"
-1
-"
-android
-:
-textColor
-=
-"
-color
-/
-tab_strip_item_title
-"
-android
-:
-textSize
-=
-"
-14sp
-"
-gecko
-:
-fadeWidth
-=
-"
-30dip
-"
-tools
-:
-text
-=
-"
-Mozilla
-"
-/
->
-<
-org
-.
-mozilla
-.
-gecko
-.
-widget
-.
 themed
 .
 ThemedImageButton
@@ -367,6 +310,15 @@ id
 id
 /
 close
+"
+style
+=
+"
+style
+/
+TabStrip
+.
+Close
 "
 android
 :
@@ -433,6 +385,109 @@ drawableTintList
 color
 /
 tab_strip_item_title
+"
+/
+>
+<
+org
+.
+mozilla
+.
+gecko
+.
+widget
+.
+CheckableFadedSingleColorTextView
+android
+:
+id
+=
+"
++
+id
+/
+title
+"
+style
+=
+"
+style
+/
+TabStrip
+.
+Title
+"
+android
+:
+layout_width
+=
+"
+match_parent
+"
+android
+:
+layout_height
+=
+"
+wrap_content
+"
+android
+:
+layout_centerVertical
+=
+"
+true
+"
+android
+:
+duplicateParentState
+=
+"
+true
+"
+android
+:
+ellipsize
+=
+"
+end
+"
+android
+:
+maxLines
+=
+"
+1
+"
+android
+:
+textColor
+=
+"
+color
+/
+tab_strip_item_title
+"
+android
+:
+textSize
+=
+"
+14sp
+"
+gecko
+:
+fadeWidth
+=
+"
+30dip
+"
+tools
+:
+text
+=
+"
+Mozilla
 "
 /
 >
