--- a/mobile/android/app/src/photon/res/values/colors.xml
+++ b/mobile/android/app/src/photon/res/values/colors.xml
@@ -2887,6 +2887,34 @@ color
 name
 =
 "
+tablet_tab_strip_indicator
+"
+>
+#
+0060DF
+<
+/
+color
+>
+<
+color
+name
+=
+"
+tablet_tab_strip_indicator_private
+"
+>
+#
+8000D7
+<
+/
+color
+>
+<
+color
+name
+=
+"
 bookmark_folder_bg_color
 "
 >
