Bug 1407322 - use currentColor for selected stylesheet icon in styleeditor;r=ntim
MozReview-Commit-ID: HysqhWk4y4G

UltraBlame original commit: e3834abf326e8dd949dc28475cb3606d890c50a1

--- a/devtools/client/themes/styleeditor.css
+++ b/devtools/client/themes/styleeditor.css
@@ -887,16 +887,7 @@ fill
 ;
 fill
 :
-var
-(
--
--
-theme
--
-toolbar
--
-color
-)
+currentColor
 ;
 }
 .
@@ -912,37 +903,6 @@ opacity
 0
 .
 3
-;
-}
-.
-splitview
--
-nav
->
-li
-.
-splitview
--
-active
-.
-stylesheet
--
-enabled
-{
-fill
-:
-var
-(
--
--
-theme
--
-toolbar
--
-selected
--
-color
-)
 ;
 }
 .
