--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -12611,6 +12611,23 @@ width
 wideMenuPanelWidth
 ;
 }
+#
+customization
+-
+panelHolder
+>
+.
+widget
+-
+overflow
+-
+list
+{
+width
+:
+auto
+;
+}
 toolbaritem
 [
 overflowedItem
