--- a/mobile/android/themes/geckoview/content.css
+++ b/mobile/android/themes/geckoview/content.css
@@ -2171,6 +2171,26 @@ display
 none
 ;
 }
+button
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+datetime
+-
+reset
+-
+button
+{
+display
+:
+none
+;
+}
 div
 :
 -
