--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -2417,9 +2417,9 @@ display
 :
 flex
 ;
-justify
+align
 -
-content
+items
 :
 center
 ;
@@ -2462,9 +2462,9 @@ top
 :
 0
 ;
-height
+margin
 :
-230px
+auto
 ;
 width
 :
@@ -2562,7 +2562,7 @@ transform
 :
 translateY
 (
-30px
+0px
 )
 ;
 }
@@ -2807,12 +2807,6 @@ shortcuts
 -
 modal
 {
-height
-:
-fit
--
-content
-;
 width
 :
 45
@@ -5048,7 +5042,7 @@ vertical
 -
 align
 :
-bottom
+sub
 ;
 }
 .
@@ -7486,6 +7480,12 @@ y
 :
 auto
 ;
+padding
+-
+top
+:
+11px
+;
 }
 .
 sources
@@ -7664,6 +7664,30 @@ padding
 0px
 3px
 0px
+;
+display
+:
+inline
+-
+block
+;
+}
+.
+sources
+-
+list
+.
+tree
+.
+node
+.
+no
+-
+arrow
+{
+width
+:
+10px
 ;
 display
 :
@@ -7878,9 +7902,10 @@ hidden
 ;
 padding
 :
-6
-.
-5px
+8px
+8px
+7px
+8px
 ;
 margin
 -
@@ -8157,16 +8182,83 @@ type
 :
 none
 ;
-padding
--
-left
-:
-0px
-;
 width
 :
 100
 %
+;
+padding
+:
+10px
+;
+margin
+:
+0
+;
+}
+.
+outline
+-
+list__class
+-
+list
+{
+list
+-
+style
+:
+none
+;
+margin
+:
+0
+;
+padding
+:
+0
+;
+padding
+-
+left
+:
+10px
+;
+}
+.
+outline
+-
+list
+h2
+{
+font
+-
+weight
+:
+normal
+;
+font
+-
+size
+:
+1em
+;
+margin
+:
+10px
+0
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
 ;
 }
 .
@@ -8185,12 +8277,6 @@ bottom
 0
 .
 2rem
-;
-padding
--
-left
-:
-1rem
 ;
 padding
 -
@@ -8326,230 +8412,6 @@ object
 -
 color
 )
-;
-}
-.
-conditional
--
-breakpoint
--
-panel
-{
-cursor
-:
-initial
-;
-margin
-:
-1em
-0
-;
-position
-:
-relative
-;
-display
-:
-flex
-;
-align
--
-items
-:
-center
-;
-background
-:
-var
-(
--
--
-theme
--
-toolbar
--
-background
-)
-;
-border
--
-top
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-}
-.
-conditional
--
-breakpoint
--
-panel
-.
-prompt
-{
-font
--
-size
-:
-1
-.
-8em
-;
-color
-:
-var
-(
--
--
-theme
--
-conditional
--
-breakpoint
--
-color
-)
-;
-padding
--
-left
-:
-3px
-;
-padding
--
-right
-:
-3px
-;
-padding
--
-bottom
-:
-3px
-;
-text
--
-align
-:
-right
-;
-width
-:
-30px
-;
-}
-.
-conditional
--
-breakpoint
--
-panel
-input
-{
-margin
-:
-5px
-10px
-;
-width
-:
-calc
-(
-100
-%
--
-4em
-)
-;
-border
-:
-none
-;
-background
-:
-var
-(
--
--
-theme
--
-toolbar
--
-background
-)
-;
-font
--
-size
-:
-14px
-;
-color
-:
-var
-(
--
--
-theme
--
-conditional
--
-breakpoint
--
-color
-)
-;
-line
--
-height
-:
-30px
-;
-}
-.
-conditional
--
-breakpoint
--
-panel
-input
-:
-focus
-{
-outline
--
-width
-:
-0
 ;
 }
 .
@@ -12405,6 +12267,230 @@ opacity
 ;
 }
 .
+conditional
+-
+breakpoint
+-
+panel
+{
+cursor
+:
+initial
+;
+margin
+:
+1em
+0
+;
+position
+:
+relative
+;
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+background
+:
+var
+(
+-
+-
+theme
+-
+toolbar
+-
+background
+)
+;
+border
+-
+top
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+}
+.
+conditional
+-
+breakpoint
+-
+panel
+.
+prompt
+{
+font
+-
+size
+:
+1
+.
+8em
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+conditional
+-
+breakpoint
+-
+color
+)
+;
+padding
+-
+left
+:
+3px
+;
+padding
+-
+right
+:
+3px
+;
+padding
+-
+bottom
+:
+3px
+;
+text
+-
+align
+:
+right
+;
+width
+:
+30px
+;
+}
+.
+conditional
+-
+breakpoint
+-
+panel
+input
+{
+margin
+:
+5px
+10px
+;
+width
+:
+calc
+(
+100
+%
+-
+4em
+)
+;
+border
+:
+none
+;
+background
+:
+var
+(
+-
+-
+theme
+-
+toolbar
+-
+background
+)
+;
+font
+-
+size
+:
+14px
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+conditional
+-
+breakpoint
+-
+color
+)
+;
+line
+-
+height
+:
+30px
+;
+}
+.
+conditional
+-
+breakpoint
+-
+panel
+input
+:
+focus
+{
+outline
+-
+width
+:
+0
+;
+}
+.
 editor
 -
 wrapper
@@ -12558,26 +12644,6 @@ body
 -
 color
 )
-;
-}
-.
-paused
-.
-CodeMirror
--
-line
-.
-paused
-.
-CodeMirror
--
-linenumber
-{
-opacity
-:
-0
-.
-7
 ;
 }
 .
@@ -14026,6 +14092,12 @@ padding
 :
 1px
 0
+;
+vertical
+-
+align
+:
+bottom
 ;
 }
 .
@@ -16151,10 +16223,6 @@ overflow
 :
 hidden
 ;
-position
-:
-sticky
-;
 z
 -
 index
@@ -16725,6 +16793,10 @@ secondary
 -
 panes
 {
+overflow
+:
+scroll
+;
 display
 :
 flex
@@ -16765,16 +16837,27 @@ secondary
 -
 panes
 -
--
-sticky
--
-commandbar
+wrapper
 {
-overflow
--
-y
+height
 :
-scroll
+100
+%
+;
+width
+:
+100
+%
+;
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
 ;
 }
 .
@@ -17056,6 +17139,34 @@ auto
 ;
 }
 .
+welcomebox
+.
+small
+-
+size
+-
+layout
+{
+display
+:
+none
+;
+}
+.
+welcomebox
+.
+normal
+-
+layout
+{
+display
+:
+inline
+-
+block
+;
+}
+.
 shortcutKeys
 {
 text
@@ -17067,6 +17178,28 @@ right
 float
 :
 left
+;
+font
+-
+family
+:
+Courier
+;
+}
+.
+shortcutKey
+{
+display
+:
+inline
+-
+block
+;
+margin
+-
+right
+:
+10px
 ;
 font
 -
@@ -17111,6 +17244,62 @@ bottom
 :
 1px
 ;
+}
+media
+(
+max
+-
+width
+:
+430px
+)
+{
+.
+welcomebox
+.
+small
+-
+size
+-
+layout
+{
+display
+:
+inline
+-
+block
+;
+}
+.
+welcomebox
+.
+normal
+-
+layout
+{
+display
+:
+none
+;
+}
+.
+shortcutFunction
+{
+margin
+-
+left
+:
+0
+;
+}
+.
+shortcutKey
+{
+display
+:
+block
+;
+}
 }
 .
 source
