Bug 1406631: Make input[type=color] rules consistent on Android. r=xidorn
Before this patch, the :-moz-system-metric pseudo-class made the
input[type="color"] rules more specific than this rule in content.css:

  * > input:not(:-moz-any([type="image"], [type="checkbox"], [type="radio"]))

After removing it, this is not the case. This seems like an accident, so let's
make input[type="color"] consistent with the rest of the buttons just the same
way as in forms.css.

MozReview-Commit-ID: 7oPsxMBDdED

UltraBlame original commit: cae6d15ae4070b1abe3a12c41891ddc4087991ab

--- a/mobile/android/themes/geckoview/content.css
+++ b/mobile/android/themes/geckoview/content.css
@@ -1085,6 +1085,14 @@ type
 reset
 "
 ]
+input
+[
+type
+=
+"
+color
+"
+]
 button
 {
 border
@@ -1380,6 +1388,16 @@ size
 =
 "
 1
+"
+]
+:
+focus
+input
+[
+type
+=
+"
+color
 "
 ]
 :
@@ -1753,6 +1771,28 @@ type
 =
 "
 reset
+"
+]
+:
+disabled
+:
+active
+input
+[
+type
+=
+"
+color
+"
+]
+:
+disabled
+input
+[
+type
+=
+"
+color
 "
 ]
 :
