Bug 1405986 - Add test cases for clamping checkbox/radio. r=mats
MozReview-Commit-ID: EIWvJFqdpP3

UltraBlame original commit: 2ebd11851adf2b09c4bdf38c3270a8eb7d6d9441

--- a/layout/reftests/forms/input/checkbox/checkbox-clamp-01.html
+++ b/layout/reftests/forms/input/checkbox/checkbox-clamp-01.html
@@ -28,7 +28,7 @@ width
 /
 height
 of
-radio
+checkbox
 .
 <
 /
@@ -79,7 +79,7 @@ match
 href
 =
 "
-radio
+checkbox
 -
 clamp
 -
@@ -93,22 +93,57 @@ html
 head
 >
 <
+style
+>
+div
+{
+position
+:
+relative
+;
+line
+-
+height
+:
+0px
+;
+}
+input
+{
+height
+:
+113px
+;
+}
+<
+/
+style
+>
+<
 body
+>
+<
+div
 >
 <
 input
 type
 =
 "
-radio
+checkbox
 "
-style
+>
+<
+input
+type
 =
 "
-height
-:
-113px
+checkbox
 "
+checked
+>
+<
+div
 >
 <
 /
