--- a/layout/reftests/forms/input/radio/radio-clamp-01.html
+++ b/layout/reftests/forms/input/radio/radio-clamp-01.html
@@ -28,7 +28,7 @@ width
 /
 height
 of
-checkbox
+radio
 .
 <
 /
@@ -79,7 +79,7 @@ match
 href
 =
 "
-checkbox
+radio
 -
 clamp
 -
@@ -93,22 +93,57 @@ html
 head
 >
 <
+style
+>
+div
+{
+position
+:
+relative
+;
+line
+-
+height
+:
+0px
+;
+}
+input
+{
+height
+:
+113px
+;
+}
+<
+/
+style
+>
+<
 body
+>
+<
+div
 >
 <
 input
 type
 =
 "
-checkbox
+radio
 "
-style
+>
+<
+input
+type
 =
 "
-height
-:
-113px
+radio
 "
+checked
+>
+<
+div
 >
 <
 /
