--- a/browser/extensions/activity-stream/data/content/activity-stream.css
+++ b/browser/extensions/activity-stream/data/content/activity-stream.css
@@ -1540,45 +1540,31 @@ middle
 body
 -
 wrapper
+.
+sections
+-
+list
+.
+section
+:
+last
+-
+of
+-
+type
+.
+body
+-
+wrapper
+.
+section
+-
+title
 {
 opacity
 :
 0
 ;
-transition
-:
-opacity
-75ms
-ease
--
-in
--
-out
-;
-}
--
-moz
--
-document
-url
-(
-about
-:
-newtab
-)
-{
-.
-body
--
-wrapper
-{
-transition
--
-delay
-:
-125ms
-;
-}
 }
 .
 body
@@ -1586,6 +1572,28 @@ body
 wrapper
 .
 on
+.
+sections
+-
+list
+.
+section
+:
+last
+-
+of
+-
+type
+.
+body
+-
+wrapper
+.
+on
+.
+section
+-
+title
 {
 opacity
 :
