Bug 1406254 - Visited reftest for ::first-line inheritance. r=emilio
MozReview-Commit-ID: 4ZOlVvBuSfT

UltraBlame original commit: e921df5cd9b9626d318987711fbfbe289733de5f

--- a/layout/style/test/test_visited_reftests.html
+++ b/layout/style/test/test_visited_reftests.html
@@ -501,6 +501,34 @@ ref
 html
 "
 "
+=
+=
+color
+-
+on
+-
+visited
+-
+text
+-
+1
+.
+html
+color
+-
+on
+-
+visited
+-
+text
+-
+1
+-
+ref
+.
+html
+"
+"
 !
 =
 content
