Bug 1405710 - Adjust find in page layout to fit Photon style. r=nechen
MozReview-Commit-ID: HrU4WuFqZgq

UltraBlame original commit: d9e77bd1f30671cfa1d59db5aff372ce8c44c531

--- a/mobile/android/app/src/main/res/layout/find_in_page_content.xml
+++ b/mobile/android/app/src/main/res/layout/find_in_page_content.xml
@@ -40,6 +40,44 @@ res
 /
 android
 "
+xmlns
+:
+tools
+=
+"
+http
+:
+/
+/
+schemas
+.
+android
+.
+com
+/
+tools
+"
+tools
+:
+parentTag
+=
+"
+LinearLayout
+"
+tools
+:
+layout_width
+=
+"
+match_parent
+"
+tools
+:
+layout_height
+=
+"
+wrap_content
+"
 >
 <
 view
@@ -125,6 +163,13 @@ find_in_page_text_margin_end
 "
 android
 :
+layout_gravity
+=
+"
+center_vertical
+"
+android
+:
 contentDescription
 =
 "
@@ -153,8 +198,9 @@ android
 textColor
 =
 "
-#
-000000
+color
+/
+photon_text_main
 "
 android
 :
@@ -239,6 +285,15 @@ center_vertical
 left
 |
 start
+"
+tools
+:
+text
+=
+"
+Find
+in
+page
 "
 /
 >
@@ -327,21 +382,21 @@ ImageButton
 "
 android
 :
-contentDescription
-=
-"
-string
-/
-find_prev
-"
-android
-:
 layout_marginTop
 =
 "
 dimen
 /
 find_in_page_control_margin_top
+"
+android
+:
+contentDescription
+=
+"
+string
+/
+find_prev
 "
 android
 :
@@ -377,21 +432,21 @@ ImageButton
 "
 android
 :
-contentDescription
-=
-"
-string
-/
-find_next
-"
-android
-:
 layout_marginTop
 =
 "
 dimen
 /
 find_in_page_control_margin_top
+"
+android
+:
+contentDescription
+=
+"
+string
+/
+find_next
 "
 android
 :
