Bug 1407923 - Adjust LWT layout/color for Photon style. r=nechen
MozReview-Commit-ID: 4PBP7L1Ch3k

UltraBlame original commit: 15a495497e3abe1b1ce5ac2e457d0c1bdfc366dc

--- a/mobile/android/app/src/main/res/values/attrs.xml
+++ b/mobile/android/app/src/main/res/values/attrs.xml
@@ -1796,6 +1796,36 @@ declare
 styleable
 >
 <
+declare
+-
+styleable
+name
+=
+"
+ToolbarRoundButton
+"
+>
+<
+attr
+name
+=
+"
+showLWTBackground
+"
+format
+=
+"
+boolean
+"
+/
+>
+<
+/
+declare
+-
+styleable
+>
+<
 /
 resources
 >
