--- a/mobile/android/app/src/photon/res/color/url_bar_title_hint.xml
+++ b/mobile/android/app/src/photon/res/color/url_bar_title_hint.xml
@@ -157,6 +157,64 @@ true
 !
 -
 -
+dark
+theme
+-
+-
+>
+<
+item
+android
+:
+color
+=
+"
+color
+/
+photon_text_placeholder_private
+"
+gecko
+:
+state_dark
+=
+"
+true
+"
+/
+>
+<
+!
+-
+-
+light
+theme
+-
+-
+>
+<
+item
+android
+:
+color
+=
+"
+color
+/
+photon_text_placeholder_private
+"
+gecko
+:
+state_light
+=
+"
+true
+"
+/
+>
+<
+!
+-
+-
 normal
 mode
 -
