--- a/mobile/android/app/src/photon/res/drawable/tab_strip_item_bg.xml
+++ b/mobile/android/app/src/photon/res/drawable/tab_strip_item_bg.xml
@@ -221,26 +221,6 @@ true
 /
 >
 <
-item
-android
-:
-drawable
-=
-"
-color
-/
-photon_tab_strip_item_private
-"
-gecko
-:
-state_private
-=
-"
-true
-"
-/
->
-<
 !
 -
 -
@@ -557,9 +537,11 @@ android
 drawable
 =
 "
+android
+:
 color
 /
-photon_tab_strip_item
+transparent
 "
 /
 >
