--- a/mobile/android/app/src/photon/res/layout/browser_toolbar.xml
+++ b/mobile/android/app/src/photon/res/layout/browser_toolbar.xml
@@ -441,6 +441,13 @@ drawable
 /
 ic_overflow
 "
+gecko
+:
+showLWTBackground
+=
+"
+true
+"
 /
 >
 <
@@ -487,6 +494,13 @@ background
 drawable
 /
 url_bar_action_button
+"
+gecko
+:
+showLWTBackground
+=
+"
+true
 "
 /
 >
@@ -653,6 +667,13 @@ visibility
 =
 "
 invisible
+"
+gecko
+:
+showLWTBackground
+=
+"
+true
 "
 /
 >
