--- a/mobile/android/app/src/photon/res/layout/toolbar_edit_layout.xml
+++ b/mobile/android/app/src/photon/res/layout/toolbar_edit_layout.xml
@@ -182,6 +182,77 @@ LinearLayout
 "
 >
 <
+org
+.
+mozilla
+.
+gecko
+.
+widget
+.
+themed
+.
+ThemedLinearLayout
+android
+:
+id
+=
+"
++
+id
+/
+url_bar_title_bg
+"
+style
+=
+"
+style
+/
+UrlBar
+.
+ThemeBackground
+"
+android
+:
+layout_width
+=
+"
+0dp
+"
+android
+:
+layout_height
+=
+"
+dimen
+/
+browser_toolbar_url_height
+"
+android
+:
+layout_weight
+=
+"
+1
+"
+android
+:
+layout_gravity
+=
+"
+center_vertical
+"
+android
+:
+background
+=
+"
+drawable
+/
+url_bar_title_bg
+"
+>
+<
 !
 -
 -
@@ -239,15 +310,6 @@ layout_gravity
 =
 "
 center_vertical
-"
-android
-:
-background
-=
-"
-drawable
-/
-url_bar_title_bg
 "
 android
 :
@@ -337,15 +399,6 @@ layout_weight
 "
 android
 :
-background
-=
-"
-drawable
-/
-url_bar_title_bg
-"
-android
-:
 contentDescription
 =
 "
@@ -379,6 +432,20 @@ selectAllOnFocus
 true
 "
 /
+>
+<
+/
+org
+.
+mozilla
+.
+gecko
+.
+widget
+.
+themed
+.
+ThemedLinearLayout
 >
 <
 org
@@ -426,6 +493,13 @@ src
 drawable
 /
 ic_qrcode
+"
+gecko
+:
+showLWTBackground
+=
+"
+true
 "
 /
 >
@@ -475,6 +549,13 @@ src
 drawable
 /
 ic_mic
+"
+gecko
+:
+showLWTBackground
+=
+"
+true
 "
 /
 >
