--- a/mobile/android/app/src/photon/res/values-large-v17/styles.xml
+++ b/mobile/android/app/src/photon/res/values-large-v17/styles.xml
@@ -918,6 +918,64 @@ name
 "
 UrlBar
 .
+ThemeBackground
+"
+parent
+=
+"
+UrlBar
+.
+V17
+.
+ThemeBackground
+"
+/
+>
+<
+style
+name
+=
+"
+UrlBar
+.
+V17
+.
+ThemeBackground
+"
+parent
+=
+"
+UrlBar
+.
+Base
+"
+>
+<
+item
+name
+=
+"
+android
+:
+layout_marginStart
+"
+>
+8dp
+<
+/
+item
+>
+<
+/
+style
+>
+<
+style
+name
+=
+"
+UrlBar
+.
 SiteIdentity
 "
 parent
@@ -959,10 +1017,10 @@ name
 "
 android
 :
-layout_marginStart
+paddingStart
 "
 >
-8dp
+3dp
 <
 /
 item
