--- a/mobile/android/app/src/photon/res/values-large/styles.xml
+++ b/mobile/android/app/src/photon/res/values-large/styles.xml
@@ -2072,6 +2072,64 @@ name
 "
 UrlBar
 .
+ThemeBackground
+"
+parent
+=
+"
+UrlBar
+.
+V15
+.
+ThemeBackground
+"
+/
+>
+<
+style
+name
+=
+"
+UrlBar
+.
+V15
+.
+ThemeBackground
+"
+parent
+=
+"
+UrlBar
+.
+Base
+"
+>
+<
+item
+name
+=
+"
+android
+:
+layout_marginLeft
+"
+>
+8dp
+<
+/
+item
+>
+<
+/
+style
+>
+<
+style
+name
+=
+"
+UrlBar
+.
 SiteIdentity
 "
 parent
@@ -2113,10 +2171,10 @@ name
 "
 android
 :
-layout_marginLeft
+paddingLeft
 "
 >
-8dp
+3dp
 <
 /
 item
