--- a/mobile/android/app/src/photon/res/values-v17/styles.xml
+++ b/mobile/android/app/src/photon/res/values-v17/styles.xml
@@ -27,6 +27,64 @@ name
 "
 UrlBar
 .
+ThemeBackground
+"
+parent
+=
+"
+UrlBar
+.
+V17
+.
+ThemeBackground
+"
+/
+>
+<
+style
+name
+=
+"
+UrlBar
+.
+V17
+.
+ThemeBackground
+"
+parent
+=
+"
+UrlBar
+.
+Base
+"
+>
+<
+item
+name
+=
+"
+android
+:
+layout_marginStart
+"
+>
+5dp
+<
+/
+item
+>
+<
+/
+style
+>
+<
+style
+name
+=
+"
+UrlBar
+.
 SiteIdentity
 "
 parent
@@ -60,21 +118,6 @@ Base
 .
 SiteIdentity
 "
->
-<
-item
-name
-=
-"
-android
-:
-layout_marginStart
-"
->
-5dp
-<
-/
-item
 >
 <
 item
