--- a/mobile/android/app/src/photon/res/drawable/url_bar_title_bg.xml
+++ b/mobile/android/app/src/photon/res/drawable/url_bar_title_bg.xml
@@ -166,15 +166,6 @@ theme
 >
 <
 item
-android
-:
-drawable
-=
-"
-color
-/
-photon_url_bar_bg
-"
 gecko
 :
 state_dark
@@ -182,7 +173,48 @@ state_dark
 "
 true
 "
+>
+<
+shape
+android
+:
+shape
+=
+"
+rectangle
+"
+>
+<
+corners
+android
+:
+radius
+=
+"
+2dp
+"
 /
+>
+<
+solid
+android
+:
+color
+=
+"
+color
+/
+photon_url_bar_bg
+"
+/
+>
+<
+/
+shape
+>
+<
+/
+item
 >
 <
 !
@@ -195,15 +227,6 @@ theme
 >
 <
 item
-android
-:
-drawable
-=
-"
-color
-/
-photon_url_bar_bg
-"
 gecko
 :
 state_light
@@ -211,7 +234,48 @@ state_light
 "
 true
 "
+>
+<
+shape
+android
+:
+shape
+=
+"
+rectangle
+"
+>
+<
+corners
+android
+:
+radius
+=
+"
+2dp
+"
 /
+>
+<
+solid
+android
+:
+color
+=
+"
+color
+/
+photon_url_bar_bg
+"
+/
+>
+<
+/
+shape
+>
+<
+/
+item
 >
 <
 !
