--- a/mobile/android/app/src/photon/res/layout/toolbar_display_layout.xml
+++ b/mobile/android/app/src/photon/res/layout/toolbar_display_layout.xml
@@ -228,6 +228,77 @@ widget
 .
 themed
 .
+ThemedLinearLayout
+android
+:
+id
+=
+"
++
+id
+/
+url_bar_title_bg
+"
+style
+=
+"
+style
+/
+UrlBar
+.
+ThemeBackground
+"
+android
+:
+layout_width
+=
+"
+0dp
+"
+android
+:
+layout_height
+=
+"
+dimen
+/
+browser_toolbar_url_height
+"
+android
+:
+layout_weight
+=
+"
+1
+"
+android
+:
+layout_gravity
+=
+"
+center_vertical
+"
+android
+:
+background
+=
+"
+drawable
+/
+url_bar_title_bg
+"
+>
+<
+org
+.
+mozilla
+.
+gecko
+.
+widget
+.
+themed
+.
 ThemedImageButton
 android
 :
@@ -257,15 +328,6 @@ center_vertical
 "
 android
 :
-background
-=
-"
-drawable
-/
-url_bar_title_bg
-"
-android
-:
 contentDescription
 =
 "
@@ -290,88 +352,6 @@ src
 drawable
 /
 ic_lock
-"
-/
->
-<
-FrameLayout
-android
-:
-layout_width
-=
-"
-match_parent
-"
-android
-:
-layout_height
-=
-"
-match_parent
-"
-android
-:
-layout_weight
-=
-"
-1
-.
-0
-"
->
-<
-org
-.
-mozilla
-.
-gecko
-.
-widget
-.
-themed
-.
-ThemedView
-android
-:
-id
-=
-"
-+
-id
-/
-url_bar_title_bg
-"
-android
-:
-layout_width
-=
-"
-match_parent
-"
-android
-:
-layout_height
-=
-"
-dimen
-/
-browser_toolbar_url_height
-"
-android
-:
-layout_gravity
-=
-"
-center_vertical
-"
-android
-:
-background
-=
-"
-drawable
-/
-url_bar_title_bg
 "
 /
 >
@@ -550,7 +530,17 @@ FadedHorizontalScrollView
 >
 <
 /
-FrameLayout
+org
+.
+mozilla
+.
+gecko
+.
+widget
+.
+themed
+.
+ThemedLinearLayout
 >
 <
 org
@@ -678,6 +668,13 @@ visibility
 =
 "
 visible
+"
+gecko
+:
+showLWTBackground
+=
+"
+true
 "
 /
 >
