--- a/mobile/android/app/src/photon/res/values/styles.xml
+++ b/mobile/android/app/src/photon/res/values/styles.xml
@@ -9375,6 +9375,64 @@ item
 style
 >
 <
+style
+name
+=
+"
+UrlBar
+.
+ThemeBackground
+"
+parent
+=
+"
+UrlBar
+.
+V15
+.
+ThemeBackground
+"
+/
+>
+<
+style
+name
+=
+"
+UrlBar
+.
+V15
+.
+ThemeBackground
+"
+parent
+=
+"
+UrlBar
+.
+Base
+"
+>
+<
+item
+name
+=
+"
+android
+:
+layout_marginLeft
+"
+>
+5dp
+<
+/
+item
+>
+<
+/
+style
+>
+<
 !
 -
 -
@@ -9498,21 +9556,6 @@ Base
 .
 SiteIdentity
 "
->
-<
-item
-name
-=
-"
-android
-:
-layout_marginLeft
-"
->
-5dp
-<
-/
-item
 >
 <
 item
