--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -3267,125 +3267,6 @@ repeat
 x
 ;
 }
-%
-ifdef
-CAN_DRAW_IN_TITLEBAR
-%
-define
-tabContainerAsFirstChild
-.
-titlebar
--
-placeholder
-[
-type
-=
-"
-pre
--
-tabs
-"
-]
-+
-#
-tabbrowser
--
-tabs
-%
-else
-%
-define
-tabContainerAsFirstChild
-#
-tabbrowser
--
-tabs
-:
-first
--
-child
-%
-endif
-tabContainerAsFirstChild
-:
-not
-(
-[
-overflow
-=
-true
-]
-)
->
-.
-tabbrowser
--
-tab
-[
-first
--
-visible
--
-tab
-]
->
-.
-tab
--
-stack
->
-.
-tab
--
-background
-[
-selected
-=
-true
-]
-tabContainerAsFirstChild
->
-.
-tabbrowser
--
-tab
-[
-first
--
-visible
--
-tab
-]
-[
-pinned
-]
->
-.
-tab
--
-stack
->
-.
-tab
--
-background
-[
-selected
-=
-true
-]
-{
-border
--
-inline
--
-start
--
-style
-:
-none
-;
-}
 .
 tab
 -
@@ -3799,7 +3680,7 @@ pinned
 ]
 :
 :
-before
+after
 {
 height
 :
@@ -3809,6 +3690,52 @@ height
 position
 :
 absolute
+;
+top
+:
+0
+;
+right
+:
+0
+;
+}
+#
+tabbrowser
+-
+tabs
+[
+positionpinnedtabs
+]
+>
+.
+tabbrowser
+-
+tab
+[
+pinned
+]
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+:
+:
+after
+{
+right
+:
+unset
+;
+left
+:
+0
 ;
 }
 .
@@ -4249,43 +4176,6 @@ tab
 :
 :
 after
-:
-root
-[
-tabsintitlebar
-]
-:
-not
-(
-[
-extradragspace
-]
-)
-#
-toolbar
--
-menubar
-[
-autohide
-=
-true
-]
-~
-#
-TabsToolbar
->
-#
-tabbrowser
--
-tabs
->
-.
-tabbrowser
--
-tab
-:
-:
-before
 %
 else
 :
@@ -4307,25 +4197,6 @@ tab
 :
 :
 after
-:
-root
-[
-tabsintitlebar
-]
-:
-not
-(
-[
-extradragspace
-]
-)
-.
-tabbrowser
--
-tab
-:
-:
-before
 %
 endif
 %
@@ -4334,22 +4205,6 @@ endif
 tabbrowser
 -
 tab
-:
-hover
-:
-:
-before
-.
-tabbrowser
--
-tab
-[
-last
--
-visible
--
-tab
-]
 :
 hover
 :
@@ -4372,11 +4227,11 @@ tabbrowser
 -
 tab
 [
-afterhovered
+beforehovered
 ]
 :
 :
-before
+after
 {
 border
 -
@@ -4466,11 +4321,21 @@ tabbrowser
 -
 tab
 [
-afterselected
+beforeselected
+-
+visible
 ]
 :
 :
-before
+after
+#
+tabbrowser
+-
+tabs
+[
+movingtab
+]
+>
 .
 tabbrowser
 -
@@ -4588,50 +4453,6 @@ tabbrowser
 -
 tab
 :
-not
-(
-[
-first
--
-visible
--
-tab
-]
-)
-:
-:
-before
-#
-tabbrowser
--
-tabs
-:
-not
-(
-[
-overflow
-]
-)
-:
-not
-(
-[
-movingtab
-]
-)
->
-.
-tabbrowser
--
-tab
-[
-last
--
-visible
--
-tab
-]
-:
 :
 after
 #
@@ -4651,7 +4472,7 @@ visuallyselected
 ]
 :
 :
-after
+before
 {
 content
 :
